<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Profile Image -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profileImage"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:scaleType="centerCrop"
            android:background="@color/background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"/>

        <!-- Blurred Background -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/backgroundBlur"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:background="@color/background"
            android:alpha="0.6"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="invisible" />

        <!-- ProgressBar -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Username -->
        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/username"
            android:background="@color/background"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/profileImage" />

        <!-- Name -->
        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameTextView" />

        <!-- Bio -->
        <TextView
            android:id="@+id/bioTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:background="@color/background"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nameTextView" />

        <!-- Followers -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/followersIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/iconamoon_profile_fill"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bioTextView" />

        <TextView
            android:id="@+id/followersCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_500"
            android:textSize="11sp"
            android:textColor="@color/gray"
            app:layout_constraintTop_toTopOf="@id/followersIcon"
            app:layout_constraintBottom_toBottomOf="@id/followersIcon"
            app:layout_constraintStart_toEndOf="@id/followersIcon"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textSize="12sp"
            android:textColor="@color/grey"
            app:layout_constraintTop_toTopOf="@id/followersIcon"
            app:layout_constraintBottom_toBottomOf="@id/followersIcon"
            app:layout_constraintStart_toEndOf="@+id/followersCount"
            android:layout_marginStart="8dp"/>



        <!-- Following -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/followingIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="4dp"
            android:src="@drawable/iconamoon_profile_fill"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/followersIcon" />

        <TextView
            android:id="@+id/followingCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_700"
            android:textSize="11sp"
            android:textColor="@color/gray"
            app:layout_constraintTop_toTopOf="@id/followingIcon"
            app:layout_constraintBottom_toBottomOf="@id/followingIcon"
            app:layout_constraintStart_toEndOf="@id/followingIcon"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textSize="12sp"
            android:textColor="@color/grey"
            app:layout_constraintTop_toTopOf="@id/followingIcon"
            app:layout_constraintBottom_toBottomOf="@id/followingIcon"
            app:layout_constraintStart_toEndOf="@+id/followingCount"
            android:layout_marginStart="8dp"/>

        <!-- Small Circle Images -->
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/smallImage1"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/followingIcon"
            tools:src="@tools:sample/avatars" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/smallImage2"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toEndOf="@id/smallImage1"
            app:layout_constraintTop_toBottomOf="@id/followingIcon"
            tools:src="@tools:sample/avatars" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/smallImage3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            tools:src="@tools:sample/avatars"
            app:layout_constraintTop_toBottomOf="@id/followingIcon"
            app:layout_constraintStart_toEndOf="@id/smallImage2"/>

        <!-- Tabs Layout -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabsLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/smallImage1"
            app:layout_constraintBottom_toTopOf="@id/viewPager"
            android:layout_marginTop="15dp"
            app:tabMode="fixed"
            app:tabGravity="fill" />

        <!-- Content ViewPager -->
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tabsLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
